# ww_agent_template

./: AGENTS.md  LICENSE  README.md  pyproject.toml
config/: README.md  env.example
residents/_template/: README.md
residents/_template/identity/: IDENTITY.md  SOUL.md  tuning.json
scripts/: README.md
src/: README.md
src/identity/: README.md
src/inference/: README.md
src/loops/: README.md
src/memory/: README.md
src/world/: README.md
tests/: README.md
