[project]
name = "worldweaver-agent"
version = "0.1.0"
description = "Minimal event-driven agent runtime for WorldWeaver residents"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
worldweaver-agent = "src.main:cli_entry"
